# jimo-server

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  migrate.py  mypy.ini  pyproject.toml  runserver.py
alembic/: env.py
alembic/versions/: 057f1e5e7a15_add_searchable_by_phone_number_config.py  064a2159eb7b_rename_image_upload_columns.py  0bb280063612_add_location_ping_table.py  23b307c6e876_add_media_column_to_post_table.py  2eb705cfa858_make_place_save_category_optional.py  345b58ae4a73_add_place_save_category_and_note.py  36824243c5a2_delete_posts_and_comments.py  378d78e50715_add_media_column_to_post_table.py  468110972f05_add_comment_index.py  553cbccae181_remove_place_save_category.py  5b80f513361d_set_default_preferences.py  5e67fabc1bc9_add_post_notifications.py  642d2801ba55_remove_waitlist_and_invite.py  761e1eabde1d_migrate_images_to_media_column.py  7861816ef9bb_add_nightlife_category.py  7a1730bf8d2e_remove_location_pinging.py  804318e08ce7_add_cafe_category.py  812e3bffe118_populate_city_and_category.py  998dcad465fd_add_city_and_category_to_places.py  9c81d4344132_convert_index_to_constraint.py  a18f47403d7c_add_indexes_for_aggregates.py  a229b4dc25c7_add_place_saves.py  a35d49e143fd_migrate_post_saves_to_place_saves.py  baf4d3383de7_add_place_id_index_to_posts_table.py  bf5be083eeca_add_comments_tables.py  d0f473550741_add_saved_post_table.py  d1aecdbe4107_add_onboarded_at_and_onboarded_city_to_.py  d556a5d2d28e_add_comment_prefs.py  e134475a36ec_base.py  e35650038a94_add_post_stars.py
app/: config.py  main.py  utils.py
app/api/: __init__.py  admin.py  comments.py  feedback.py  mapV3.py  me.py  notifications.py  places.py  posts.py  search.py  users.py  utils.py  waitlist.py
app/controllers/: categories.py  dependencies.py  firebase.py  notifications.py  tasks.py
app/core/: common.py  config.py  firebase.py  internal.py  tasks.py  types.py
app/db/: database.py
app/features/: me.py  stores.py  tasks.py  (+1 more)
scripts/: black.sh  check.sh  lint.sh  test.sh
server/: Dockerfile  config.py  init_db.py  migrate.py  pyproject.toml  runserver.py
server/alembic/: env.py
server/alembic/versions/: README  a18f47403d7c_add_indexes_for_aggregates.py  b027b7e42b23_add_is_admin_to_user.py  b9094d09fa9d_create_schema.py  bf5be083eeca_add_comments_tables.py  d556a5d2d28e_add_comment_prefs.py  e134475a36ec_base.py  f48d046d6b87_add_relation_field_to_follow_table.py
server/app/: config.py  database.py  main.py
server/app/api/: __init__.py  admin.py  comments.py  feedback.py  me.py  notifications.py  places.py  posts.py  search.py  users.py  utils.py  waitlist.py
server/app/controllers/: auth.py  categories.py  controller.py  firebase.py  images.py  notifications.py  places.py  posts.py  users.py  utils.py
server/app/db/: database.py
server/app/models/: models.py  request_schemas.py  response_schemas.py  schemas.py  validators.py
server/app/routers/: __init__.py  notifications.py  places.py  posts.py  search.py  users.py  utils.py  waitlist.py
server/app/schemas/: __init__.py  admin.py  base.py  comment.py  feedback.py  image.py  internal.py  invite.py  notifications.py  place.py  post.py  user.py  validators.py
server/app/stores/: comment_store.py  feed_store.py  invite_store.py  place_store.py  post_store.py  relation_store.py  user_store.py
server/models/: models.py
server/schemas/: admin.py  comment.py  feedback.py  image.py  internal.py  invite.py  notifications.py  place.py  post.py  user.py
server/scripts/: README.md  check.sh
server/shared/models/: models.py
server/shared/schemas/: admin.py  base.py  comment.py  feedback.py  image.py  internal.py  invite.py  notifications.py  place.py  post.py  user.py
server/shared/stores/: comment_store.py  feed_store.py  invite_store.py  place_store.py  post_store.py  relation_store.py  user_store.py  utils.py
server/stores/: comment_store.py  feed_store.py  invite_store.py  place_store.py  post_store.py  relation_store.py  user_store.py  utils.py
server/tests/: conftest.py  mock_firebase.py  test_admin.py  test_blocking.py  test_comments.py  test_followers.py  test_index.py  test_me.py  utils.py
tests/: conftest.py  fixtures.py  mock_firebase.py  pytest.ini  test_admin.py  test_blocking.py  test_comments.py  test_followers.py  test_index.py  test_map.py  test_me.py  test_places.py  test_posts.py
(+76 files in other folders)
