[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
fastapi = "^0.78.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
uvicorn = { extras = ["standard"], version = "^0.17.6" }
gunicorn = "^20.1.0"
ulid-py = "^1.1.0"
GeoAlchemy2 = "^0.11.1"
psycopg2 = "^2.9.3"
firebase-admin = "^5.2.0"
python-multipart = "^0.0.5"
alembic = "^1.7.7"
asyncpg = "^0.25.0"
slowapi = "^0.1.5"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
black = "^22.3.0"
types-cachetools = "^5.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
