[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^20.1.0"
ulid-py = "^1.1.0"
geoalchemy2 = "^0.12.5"
psycopg2 = "^2.9.5"
firebase-admin = "^6.0.1"
python-multipart = "^0.0.5"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
slowapi = "^0.1.6"
httpx = "^0.23.0"
sqlalchemy = "2.0.0rc1"
greenlet = "^2.0.1"
timing-asgi = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
black = "^22.3.0"
types-cachetools = "^5.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
