[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
fastapi = "^0.109.1"
uvicorn = { extras = ["standard"], version = "^0.25.0" }
gunicorn = "^21.2.0"
ulid-py = "^1.1.0"
geoalchemy2 = "^0.14.3"
psycopg2 = "^2.9.9"
firebase-admin = "^6.3.0"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
slowapi = "^0.1.8"
httpx = "^0.26.0"
sqlalchemy = "^2.0.23"
greenlet = "^3.0.3"
timing-asgi = "^0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
black = "^23.12.1"
types-cachetools = "^5.3.0.7"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
