[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
SQLAlchemy = "^1.3.20"
psycopg2 = "^2.8.6"
GeoAlchemy2 = "^0.8.4"
firebase-admin = "^4.4.0"
cffi = "^1.14.5"
grpcio = "^1.35.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
