[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" },
    { include = "models" },
    { include = "schemas" },
    { include = "stores" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.5"
psycopg2 = "^2.8.6"
GeoAlchemy2 = "^0.8.5"
firebase-admin = "^4.5.3"
cffi = "^1.14.5"
grpcio = "^1.38.0"
python-multipart = "^0.0.5"
alembic = "^1.5.8"
ulid-py = "^1.1.0"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
